--- a/Cointopay/PaymentGateway/composer.json
+++ b/Cointopay/PaymentGateway/composer.json
@@ -1,19 +1,17 @@
 {
-    "name": "magento/module-sample-payment-gateway",
-    "description": "Demonstrates integration with payment gateway",
+    "name": "cointopay/paymentgateway",
+    "description": "Crypto currency payments",
     "require": {
-        "php": "~5.5.0|~5.6.0|~7.0.0",
-        "magento/module-sales": "100.0.*",
-        "magento/module-checkout": "100.0.*",
-        "magento/module-payment": "100.0.*",
-        "magento/framework": "100.0.*",
-        "magento/magento-composer-installer": "100.0.*"
+        "php": "7.0.2|7.0.4|~7.0.6|~7.1.0",
+        "magento/module-sales": "101.0.*",
+        "magento/module-checkout": "100.2.*",
+        "magento/module-payment": "100.2.*",
+        "magento/framework": "101.0.*"
     },
     "type": "magento2-module",
     "version": "100.0.3",
     "license": [
-        "OSL-3.0",
-        "AFL-3.0"
+        "GPL-3.0"
     ],
     "autoload": {
         "files": [ "registration.php" ],
