--- a/Cointopay/PaymentGateway/composer.json
+++ b/Cointopay/PaymentGateway/composer.json
@@ -1,15 +1,16 @@
 {
     "name": "cointopay/paymentgateway",
     "description": "Crypto currency payments",
-    "require": {
-        "php": "7.0.2|7.0.4|~7.0.6|~7.1.0",
-        "magento/module-sales": "101.0.*",
-        "magento/module-checkout": "100.2.*",
-        "magento/module-payment": "100.2.*",
-        "magento/framework": "101.0.*"
-    },
+    "require": {},
+    "authors": [
+        {
+            "name": "Ali Usman",
+            "email": "mealiusman@gmail.com",
+            "role": "Developer"
+        }
+    ],
     "type": "magento2-module",
-    "version": "100.0.4",
+    "version": "100.1.5",
     "license": [
         "OSL-3.0",
         "GPL-3.0"
