--- a/Cointopay/PaymentGateway/composer.json
+++ b/Cointopay/PaymentGateway/composer.json
@@ -4,8 +4,8 @@
     "require": {},
     "authors": [
         {
-            "name": "Ali Usman",
-            "email": "mealiusman@gmail.com",
+            "name": "Cointopay International B.V.",
+            "email": "support@cointopay.com",
             "role": "Developer"
         }
     ],
